Fixed footer size on mobile devices due to latest changes

--- a/components/Footer.scss
+++ b/components/Footer.scss
@@ -11,7 +11,7 @@ footer
 	text-align: center;
 	box-shadow: 0 -0.1rem 1rem rgb(0, 0, 0, 0.1);
 	margin-top: 5rem;
-	min-height: 7rem;
+	min-height: 5rem;
 	flex-direction: column;
 	justify-content: center;
 
